cmake_minimum_required(VERSION 3.15)
project(Linklist)

set(CMAKE_CXX_STANDARD 14)

#add_executable(Linklist main.cpp Linklist/linklist.h Linklist/linklist.cpp Linklist/LLinklist.cpp Linklist/LLinklist.h)
#add_executable(Linklist main1.cpp Stack/Stack.cpp Stack/Stack.h Linklist/linklist.h Linklist/linklist.cpp)
#add_executable(Linklist main2.cpp Queue/Queue.cpp Queue/Queue.h Stack/Stack.cpp Stack/Stack.h)
#add_executable(Linklist main3.cpp String/Str.h)
#add_executable(Linklist main4.cpp Tree/Tree.cpp Tree/Tree.h)
#add_executable(Linklist main5.cpp BST/BST.cpp BST/BST.h)
add_executable(Linklist main6.cpp Graph/Graph.cpp Graph/Graph.h)
