# cmake_minimum_required(VERSION <specify CMake version here>)
project(One)

set(CMAKE_CXX_STANDARD 14)
FIND_PACKAGE(OpenMP REQUIRED)
if (OPENMP_FOUND)
    set(CMAKE_C_FLAGS "${OpenMP_C_FLAGS}")
endif ()
#add_executable(One main.cpp)
#add_executable(One one.cpp)
#add_executable(One two.cpp)
#add_executable(One there.cpp)
#add_executable(One eight.c nine.c)
add_executable(One nine.c)
